Bug 299205 - Cannot connect to hidden wireless network with WPS/PSK on kubuntu 1204 LTS
Summary: Cannot connect to hidden wireless network with WPS/PSK on kubuntu 1204 LTS
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Wireless (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
: 314627 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-05-01 22:30 UTC by Nikita Shipkov
Modified: 2013-02-08 14:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Shipkov 2012-05-01 22:30:30 UTC
Hardware Lenovo t61 wide screen machine 6464-v4p/ OS: Kubuntu 1204 LTS x64 / KDE Platform Version 4.8.2 (4.8.2)/Manage Connections
Version 0.9.0.1 (nm09 20120407)

Hello,

I cannot connect to secured hidden wirelles access point from Live CD.
I tried it several times by inputting all the data double checked. Alas!

At the same time connection to unsecured non-hidded wireless is Ok
Comment 1 Lamarque V. Souza 2012-05-06 03:14:04 UTC
Git commit 3a5a1528894787aedf8ce5d0bb423574145bda4a by Lamarque V. Souza.
Committed on 06/05/2012 at 05:13.
Pushed by lvsouza into branch 'nm09'.

Fix hidden wireless network creation.
FIXED-IN: 0.9.0.2

M  +2    -2    settings/configshell/manageconnection.cpp

http://commits.kde.org/networkmanagement/3a5a1528894787aedf8ce5d0bb423574145bda4a
Comment 2 Lamarque V. Souza 2013-02-08 14:05:17 UTC
*** Bug 314627 has been marked as a duplicate of this bug. ***