Fix hidden wireless network creation.

BUG: 299205
FIXED-IN: 0.9.0.2